--- a/templates/header.html
+++ b/templates/header.html
@@ -206,17 +206,17 @@
                   </li>
                   <li><a href="/crm-users-list/">&#9656;&nbsp;CRM Users List</a>
                   </li>
-                  <li><a href="/technology-lists/erp-users-list">&#9656;&nbsp;ERP Users List</a>
+                  <li><a href="/erp-users-list/">&#9656;&nbsp;ERP Users List</a>
                   </li>
-                  <li><a href="/technology-lists/ms-dynamics-crm-users-list">&#9656;&nbsp;MS Dynamics Users List</a>
+                  <li><a href="/ms-dynamics-crm-users-list/">&#9656;&nbsp;MS Dynamics Users List</a>
                   </li>
-                  <li><a href="/technology-lists/peoplesoft-users-list">&#9656;&nbsp;PeopleSoft Users List</a>
+                  <li><a href="/peoplesoft-users-list/">&#9656;&nbsp;PeopleSoft Users List</a>
                   </li>
-                  <li><a href="/technology-lists/quickbooks-users-list">&#9656;&nbsp;QuickBooks Users List</a>
+                  <li><a href="/quickbooks-users-list/">&#9656;&nbsp;QuickBooks Users List</a>
                   </li>
-                  <li><a href="/technology-lists/salesforce-crm-users-list">&#9656;&nbsp;Salesforce users list</a>
+                  <li><a href="/salesforce-crm-users-list/">&#9656;&nbsp;Salesforce users list</a>
                   </li>
-                  <li><a href="/technology-lists/sap-users-list">&#9656;&nbsp;SAP Users List</a>
+                  <li><a href="/sap-users-list/">&#9656;&nbsp;SAP Users List</a>
                   </li>
                   <li class="high-text"><a href="/technology-lists/">&#9656;&nbsp;And More!</a>
                   </li>
