--- a/templates/index.html
+++ b/templates/index.html
@@ -120,64 +120,64 @@
                                 <li
                                     class="menu-has-children"><a href="/technology-lists/"><img src="/static/assets/img/Technology-Data.png" alt="Technology-Data">&nbsp;Technology Data</a>
                                     <ul>
-                                        <li><a href="/technology-lists/as-400-users-list">&#9656;&nbsp;AS/400 Users List</a> </li>
-                                        <li><a href="/technology-lists/amazon-web-services-users-list">&#9656;&nbsp;AWS Users List</a> </li>
-                                        <li><a href="/technology-lists/crm-users-list">&#9656;&nbsp;CRM Users List</a> </li>
-                                        <li><a href="/technology-lists/erp-users-list">&#9656;&nbsp;ERP Users List</a> </li>
-                                        <li><a href="/technology-lists/ms-dynamics-crm-users-list">&#9656;&nbsp;MS Dynamics Users List</a> </li>
-                                        <li><a href="/technology-lists/peoplesoft-users-list">&#9656;&nbsp;PeopleSoft Users List</a> </li>
-                                        <li><a href="/technology-lists/quickbooks-users-list">&#9656;&nbsp;QuickBooks Users List</a> </li>
-                                        <li><a href="/technology-lists/salesforce-crm-users-list">&#9656;&nbsp;Salesforce users list</a> </li>
-                                        <li><a href="/technology-lists/sap-users-list">&#9656;&nbsp;SAP Users List</a> </li>
+                                        <li><a href="/as-400-users-list/">&#9656;&nbsp;AS/400 Users List</a> </li>
+                                        <li><a href="/amazon-web-services-users-list/">&#9656;&nbsp;AWS Users List</a> </li>
+                                        <li><a href="/crm-users-list/">&#9656;&nbsp;CRM Users List</a> </li>
+                                        <li><a href="/erp-users-list/">&#9656;&nbsp;ERP Users List</a> </li>
+                                        <li><a href="/ms-dynamics-crm-users-list/">&#9656;&nbsp;MS Dynamics Users List</a> </li>
+                                        <li><a href="/peoplesoft-users-list/">&#9656;&nbsp;PeopleSoft Users List</a> </li>
+                                        <li><a href="/quickbooks-users-list/">&#9656;&nbsp;QuickBooks Users List</a> </li>
+                                        <li><a href="/salesforce-crm-users-list/">&#9656;&nbsp;Salesforce users list</a> </li>
+                                        <li><a href="/sap-users-list/">&#9656;&nbsp;SAP Users List</a> </li>
                                         <li class="high-text"><a href="/technology-lists/">&#9656;&nbsp;And More!</a> </li>
                                     </ul>
                         </li>
                         <li class="menu-has-children"><a href="/professional-lists/"><img src="/static/assets/img/Professionals-Data.png" alt="Professionals-Data">&nbsp;Professionals Data</a>
                             <ul>
-                                <li><a href="/professional-lists/cpa-email-list">&#9656;&nbsp; Accountants Email List</a> </li>
-                                <li><a href="/professional-lists/attorney-email-list">&#9656;&nbsp;Attorney Email List </a></li>
-                                <li><a href="/professional-lists/ceo-email-list">&#9656;&nbsp;CEO Email List</a></li>
-                                <li><a href="/professional-lists/cfo-email-list">&#9656;&nbsp;CFO Email list</a></li>
-                                <li><a href="/professional-lists/cio-email-list">&#9656;&nbsp;CIO Email List</a></li>
-                                <li><a href="/professional-lists/cmo-email-list">&#9656;&nbsp;CMO Email List </a></li>
-                                <li><a href="/professional-lists/cto-email-list">&#9656;&nbsp;CTO Email List </a></li>
-                                <li><a href="/database/hr-executives-mailing-list">&#9656;&nbsp;HR Email List </a></li>
-                                <li><a href="/database/loan-officer-email-list">&#9656;&nbsp;Loan Officers Email List</a></li>
+                                <li><a href="/cpa-email-list/">&#9656;&nbsp; Accountants Email List</a> </li>
+                                <li><a href="/attorney-email-list/">&#9656;&nbsp;Attorney Email List </a></li>
+                                <li><a href="/ceo-email-list/">&#9656;&nbsp;CEO Email List</a></li>
+                                <li><a href="/cfo-email-list/">&#9656;&nbsp;CFO Email list</a></li>
+                                <li><a href="/cio-email-list/">&#9656;&nbsp;CIO Email List</a></li>
+                                <li><a href="/cmo-email-list/">&#9656;&nbsp;CMO Email List </a></li>
+                                <li><a href="/cto-email-list/">&#9656;&nbsp;CTO Email List </a></li>
+                                <li><a href="/hr-executives-mailing-list/">&#9656;&nbsp;HR Email List </a></li>
+                                <li><a href="/loan-officer-email-list/">&#9656;&nbsp;Loan Officers Email List</a></li>
                                 <li class="high-text"><a href="/professional-lists/">&#9656;&nbsp;And More! </a></li>
                             </ul>
                         </li>
                         <li class="menu-has-children"><a href="/industry-wise-lists/"><img src="/static/assets/img/Industry-Wise-Data.png" alt="Industry-Wise-Data">&nbsp;Industry Wise Data</a>
                             <ul>
-                                <li><a href="/industry-wise-lists/automotive-industry-email-list">&#9656;&nbsp; Automotive Industry </a></li>
-                                <li><a href="/industry-wise-lists/banking-and-finance-industry-email-list">&#9656;&nbsp; Banking & Finance Industry </a></li>
-                                <li><a href="/industry-wise-lists/oil-and-gas-industry-email-list">&#9656;&nbsp; Oil & Gas Industry </a></li>
-                                <li><a href="/industry-wise-lists/real-estate-industry-email-list">&#9656;&nbsp; Real Estate Industry </a></li>
-                                <li><a href="/industry-wise-lists/manufacturing-industries-email-list">&#9656;&nbsp; Manufacturing Industry </a></li>
+                                <li><a href="/automotive-industry-email-list/">&#9656;&nbsp; Automotive Industry </a></li>
+                                <li><a href="/banking-and-finance-industry-email-list/">&#9656;&nbsp; Banking & Finance Industry </a></li>
+                                <li><a href="/oil-and-gas-industry-email-list/">&#9656;&nbsp; Oil & Gas Industry </a></li>
+                                <li><a href="/real-estate-industry-email-list/">&#9656;&nbsp; Real Estate Industry </a></li>
+                                <li><a href="/manufacturing-industries-email-list/">&#9656;&nbsp; Manufacturing Industry </a></li>
                                 <li class="high-text"><a href="/industry-wise-lists/">&#9656;&nbsp;And More! </a></li>
                             </ul>
                         </li>
                         <li class="menu-has-children"><a href="/healthcare-lists/"><img src="/static/assets/img/Healthcare-Data.png" alt="Healthcare-Data">&nbsp;Healthcare Data</a>
                             <ul>
-                                <li><a href="/healthcare-lists/dentists-email-list">&#9656;&nbsp; Dentists Email List </a></li>
-                                <li><a href="/healthcare-lists/hospital-email-list">&#9656;&nbsp; Hospital Email List </a></li>
-                                <li><a href="/healthcare-lists/nurses-email-list">&#9656;&nbsp; Nurses Email List </a></li>
-                                <li><a href="/healthcare-lists/physician-email-list">&#9656;&nbsp; Physicians Email List </a></li>
+                                <li><a href="/dentists-email-list/">&#9656;&nbsp; Dentists Email List </a></li>
+                                <li><a href="/hospital-email-list/">&#9656;&nbsp; Hospital Email List </a></li>
+                                <li><a href="/nurses-email-list/">&#9656;&nbsp; Nurses Email List </a></li>
+                                <li><a href="/physician-email-list/">&#9656;&nbsp; Physicians Email List </a></li>
                                 <li class="high-text"><a href="/healthcare-lists/">&#9656;&nbsp;And More! </a></li>
                             </ul>
                         </li>
                         <li><a href="/gov-sector-decision-makers-data"><img src="/static/assets/img/Govt-Sector-Data.png" alt="Govt-Sector-Data">&nbsp;Govt Sector Data</a></li>
                         <li class="menu-has-children"><a href="/geo-targeted-lists/"><img src="/static/assets/img/Geo-Targeted-Data.png" alt="Geo-Targeted-Data">&nbsp;Geo Targeted Data</a>
                             <ul>
-                                <li><a href="/geo-targeted-lists/usa-business-email-list">&#9656;&nbsp; USA Business Email List </a></li>
-                                <li><a href="/geo-targeted-lists/canada-business-email-list">&#9656;&nbsp; Canada Business Email List </a></li>
-                                <li><a href="/geo-targeted-lists/uk-business-email-list">&#9656;&nbsp; UK Business Email List </a></li>
-                                <li><a href="/geo-targeted-lists/australia-business-email-list">&#9656;&nbsp; Australia Business Email List </a></li>
+                                <li><a href="/usa-business-email-list/">&#9656;&nbsp; USA Business Email List </a></li>
+                                <li><a href="/canada-business-email-list/">&#9656;&nbsp; Canada Business Email List </a></li>
+                                <li><a href="/uk-business-email-list/">&#9656;&nbsp; UK Business Email List </a></li>
+                                <li><a href="/australia-business-email-list/">&#9656;&nbsp; Australia Business Email List </a></li>
                                 <li class="high-text"><a href="/geo-targeted-lists/">&#9656;&nbsp;And More! </a></li>
                             </ul>
                         </li>
                         </ul>
                         </li>
-                        <li class="menu-has-children"><a href="/data-enrichment-services">Enhance</a>
+                        <li class="menu-has-children"><a href="/data-enrichment-services/">Enhance</a>
                             <ul>
                                 <li><a href="/email-appending/">Email Append</a></li>
                                 <li><a href="/data-appending/">Data Append</a></li>
@@ -189,7 +189,7 @@
                         </li>
 
 
-                        <li><a href="/contact-us#contactform" class="scrollto">Contact Us</a></li>
+                        <li><a href="/contact-us/" class="scrollto">Contact Us</a></li>
 <!--                        <li><a href="/datasets"><img src="/static/assets/img/Explore-Data-Card.gif" alt="Explore Data Card" title="Explore Data Card" class="respo-img"></a></li>-->
                     </ul>
                 </nav>
