--- a/templates/header.html
+++ b/templates/header.html
@@ -242,29 +242,29 @@
               <li class="menu-has-children"><a href="/industry-wise-lists/"><img src="/static/assets/img/Industry-Wise-Data.png" alt="Industry-Wise-Data">&nbsp;Industry Wise Data</a>
                 <ul>
                   <li><a href="/automotive-industry-email-list/">&#9656;&nbsp; Automotive Industry </a></li>
-                  <li><a href="/industry-wise-lists/banking-and-finance-industry-email-list">&#9656;&nbsp; Banking & Finance Industry </a></li>
-                  <li><a href="/industry-wise-lists/oil-and-gas-industry-email-list">&#9656;&nbsp; Oil & Gas Industry </a></li>
-                  <li><a href="/industry-wise-lists/real-estate-industry-email-list">&#9656;&nbsp; Real Estate Industry </a></li>
-				  <li><a href="/industry-wise-lists/manufacturing-industries-email-list">&#9656;&nbsp; Manufacturing Industry </a></li>
+                  <li><a href="/banking-and-finance-industry-email-list">&#9656;&nbsp; Banking & Finance Industry </a></li>
+                  <li><a href="/oil-and-gas-industry-email-list">&#9656;&nbsp; Oil & Gas Industry </a></li>
+                  <li><a href="/real-estate-industry-email-list">&#9656;&nbsp; Real Estate Industry </a></li>
+				  <li><a href="/manufacturing-industries-email-list">&#9656;&nbsp; Manufacturing Industry </a></li>
                   <li class="high-text"><a href="/industry-wise-lists/">&#9656;&nbsp;And More! </a></li>
                 </ul>
               </li>
               <li class="menu-has-children"><a href="/healthcare-lists/"><img src="/static/assets/img/Healthcare-Data.png" alt="Healthcare-Data">&nbsp;Healthcare Data</a>
                 <ul>
-                  <li><a href="/healthcare-lists/dentists-email-list">&#9656;&nbsp; Dentists Email List </a></li>
-                  <li><a href="/healthcare-lists/hospital-email-list">&#9656;&nbsp; Hospital Email List </a></li>
-                  <li><a href="/healthcare-lists/nurses-email-list">&#9656;&nbsp; Nurses Email List </a></li>
-                  <li><a href="/healthcare-lists/physician-email-list">&#9656;&nbsp; Physicians Email List </a></li>
+                  <li><a href="/dentists-email-list">&#9656;&nbsp; Dentists Email List </a></li>
+                  <li><a href="/hospital-email-list">&#9656;&nbsp; Hospital Email List </a></li>
+                  <li><a href="/nurses-email-list">&#9656;&nbsp; Nurses Email List </a></li>
+                  <li><a href="/physician-email-list">&#9656;&nbsp; Physicians Email List </a></li>
                   <li class="high-text"><a href="/healthcare-lists/">&#9656;&nbsp;And More! </a></li>
                 </ul>
               </li>
-              <li><a href="/gov-sector-decision-makers-data"><img src="/static/assets/img/Govt-Sector-Data.png" alt="Govt-Sector-Data">&nbsp;Govt Sector Data</a></li>
+              <li><a href="/gov-sector-decision-makers-data/"><img src="/static/assets/img/Govt-Sector-Data.png" alt="Govt-Sector-Data">&nbsp;Govt Sector Data</a></li>
               <li class="menu-has-children"><a href="/geo-targeted-lists/"><img src="/static/assets/img/Geo-Targeted-Data.png" alt="Geo-Targeted-Data">&nbsp;Geo Targeted Data</a>
                 <ul>
-                  <li><a href="/geo-targeted-lists/usa-business-email-list">&#9656;&nbsp; USA Business Email List </a></li>
-                  <li><a href="/geo-targeted-lists/canada-business-email-list">&#9656;&nbsp; Canada Business Email List </a></li>
-                  <li><a href="/geo-targeted-lists/uk-business-email-list">&#9656;&nbsp; UK Business Email List </a></li>
-                  <li><a href="/geo-targeted-lists/australia-business-email-list">&#9656;&nbsp; Australia Business Email List </a></li>
+                  <li><a href="/usa-business-email-list/">&#9656;&nbsp; USA Business Email List </a></li>
+                  <li><a href="/canada-business-email-list/">&#9656;&nbsp; Canada Business Email List </a></li>
+                  <li><a href="/uk-business-email-list/">&#9656;&nbsp; UK Business Email List </a></li>
+                  <li><a href="/australia-business-email-list/">&#9656;&nbsp; Australia Business Email List </a></li>
                   <li class="high-text"><a href="/geo-targeted-lists/">&#9656;&nbsp;And More! </a></li>
                 </ul>
               </li>
@@ -278,8 +278,8 @@
               <li><a href="/data-appending/">Data Append</a></li>
               <li><a href="/data-verification/">Data Verification</a></li>
               <li><a href="/data-profiling/">Data Profiling</a></li>
-              <li><a href="/data-intelligence">Data Management</a></li>
-              <li><a href="/data-cleansing">Data Cleansing</a></li>
+              <li><a href="/data-intelligence/">Data Management</a></li>
+              <li><a href="/data-cleansing/">Data Cleansing</a></li>
             </ul>
           </li>
           
