--- a/templates/phone-appending.html
+++ b/templates/phone-appending.html
@@ -79,6 +79,7 @@
     </style>
 
  {% endblock %}
+
  {% block content %}
 
     <section class="inner-banner phone-appending-banner">
@@ -114,36 +115,36 @@
                         <p>Our excellent Business <strong>telephone append services</strong> can help boost or even replace the role of a traditional marketing campaign. At Span Global Services, we utilize many different sources to provide you with unrivalled
                             accuracy and exceptional phone match rates.</p>
                         <p>Not only this, we can fine-tune our process and existing database to match your individual needs (business objective), goals and budget. The data we supply to our clients is updated monthly with fresh set of numbers. We are the
-                            only <a href="https://www.spanglobalservices.com/" title="Email Database Provider"><strong>email database provider</strong></a> that verifies each number against the telephone service provider database and update the file immediately.</p>
+                            only <a href="/" title="Email Database Provider"><strong>email database provider</strong></a> that verifies each number against the telephone service provider database and update the file immediately.</p>
                         <p><strong>Fill in the gaps in your database, with our niche appending services:</strong></p>
                         <div class="row sicon">
                             <div class="col-lg-4 mb-4 ">
-                                <a href="https://www.spanglobalservices.com/data-append/email-appending" title="Email Appending">
-                                    <div class="icon"><img src="https://www.spanglobalservices.com/assets/img/email-appending-thumb.jpg" alt="Email Appending" class="respo-img" /> </div>
+                                <a href="/email-appending/" title="Email Appending">
+                                    <div class="icon"><img src="/static/assets/img/email-appending-thumb.jpg" alt="Email Appending" class="respo-img" /> </div>
                                     <p class="description">Email<br/> Appending</p>
                                 </a>
                             </div>
                             <div class="col-lg-4 mb-4">
-                                <a href="https://www.spanglobalservices.com/data-append/phone-appending" title="Phone Appending">
-                                    <div class="icon"><img src="https://www.spanglobalservices.com/assets/img/phone-appending-thumb.jpg" alt="Phone Appending" class="respo-img" /> </div>
+                                <a href="/phone-appending/" title="Phone Appending">
+                                    <div class="icon"><img src="/static/assets/img/phone-appending-thumb.jpg" alt="Phone Appending" class="respo-img" /> </div>
                                     <p class="description">Phone<br/> Appending</p>
                                 </a>
                             </div>
                             <div class="col-lg-4 mb-4">
                                 <a href="https://www.spanglobalservices.com/data-append/contact-appending" title="Contact Appending">
-                                    <div class="icon"><img src="https://www.spanglobalservices.com/assets/img/contact-appending-thumb.jpg" alt="Contact Appending" class="respo-img" /> </div>
+                                    <div class="icon"><img src="/static/assets/img/contact-appending-thumb.jpg" alt="Contact Appending" class="respo-img" /> </div>
                                     <p class="description">Contact<br/> Appending</p>
                                 </a>
                             </div>
                             <div class="col-lg-4 mb-4">
-                                <a href="https://www.spanglobalservices.com/data-append/b2c-email-appending" title="B2C Email Appending">
-                                    <div class="icon"><img src="https://www.spanglobalservices.com/assets/img/b2c-email-appending-thumb.jpg" alt="B2C Email Appending" class="respo-img" /> </div>
+                                <a href="/b2c-email-appending/" title="B2C Email Appending">
+                                    <div class="icon"><img src="/static/assets/img/b2c-email-appending-thumb.jpg" alt="B2C Email Appending" class="respo-img" /> </div>
                                     <p class="description">B2C Email<br/> Appending</p>
                                 </a>
                             </div>
                             <div class="col-lg-4 mb-4">
-                                <a href="https://www.spanglobalservices.com/data-append/social-media-profile-appending" title="Social Media Profile Appending">
-                                    <div class="icon"><img src="https://www.spanglobalservices.com/assets/img/social-profile-appending-thumb.jpg" alt="Social Media Profile Appending" class="respo-img" /> </div>
+                                <a href="/social-media-profile-appending/" title="Social Media Profile Appending">
+                                    <div class="icon"><img src="/static/assets/img/social-profile-appending-thumb.jpg" alt="Social Media Profile Appending" class="respo-img" /> </div>
                                     <p class="description">Social Media<br/>Profile Appending</p>
                                 </a>
                             </div>
@@ -155,7 +156,7 @@
                                 <h4>Free Append Test</h4>
                                 </br>
                                 <div class="form">
-                                    <form name="f20" id="contact-form" action="https://www.spanglobalservices.com/scripts/append-mailer" method="post" onSubmit="return dataappendvalidation()" enctype="multipart/form-data"> <input type="hidden" name="returnURL" value="https://www.spanglobalservices.com/thanks"><input name="title" type="hidden" value="Contact Request from Span Global Services">
+                                    <form name="f20" id="contact-form" action="https://www.spanglobalservices.com/scripts/append-mailer" method="post" onSubmit="return dataappendvalidation()" enctype="multipart/form-data"> <input type="hidden" name="returnURL" value="/"><input name="title" type="hidden" value="Contact Request from Span Global Services">
                                         <div class=" form-row">
                                             <div class="col-lg-6 form-group">
                                                 <div class="input-container"> <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name*"> <i class="fa fa-user icon"></i> </div>
@@ -216,19 +217,19 @@
                             <p>By signing up for our phone appending services, you can reduce the time wasted on calling wrong numbers or numbers not in use. All you need to do is give us your database and we will give you the <strong>phone appended list</strong>                                in less than 7 business days.</p>
                         </div>
                     </div>
-                    <div class="col-lg-6 wow fadeInRight"> <img src="https://www.spanglobalservices.com/assets/img/increased-conversion.jpg" alt="Phone Appending" class="full-img" /> </div>
+                    <div class="col-lg-6 wow fadeInRight"> <img src="/static/assets/img/increased-conversion.jpg" alt="Phone Appending" class="full-img" /> </div>
                 </div>
             </div>
         </section>
         <section class="blue-sec-light">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-lg-6 wow fadeInRight padlf-none"> <img src="https://www.spanglobalservices.com/assets/img/data-appending-sub.jpg" alt=" Phone Appending" class="full-img" /> </div>
+                    <div class="col-lg-6 wow fadeInRight padlf-none"> <img src="/static/assets/img/data-appending-sub.jpg" alt=" Phone Appending" class="full-img" /> </div>
                     <div class="col-lg-6 mb-4 wow fadeInLeft centeralign">
                         <div class="">
                             <h4 class="subhead-big mb-2">Manage Data </h4>
                             <h2 class=" normal-head">before it manages you </h2>
-                            <div class="mb-4 mt-4"> <a href="https://www.spanglobalservices.com/contact-us" class="blk-btn ">Let's Talk &nbsp; <i class="fa fa-phone"></i></a> </div>
+                            <div class="mb-4 mt-4"> <a href="/contact-us/" class="blk-btn ">Let's Talk &nbsp; <i class="fa fa-phone"></i></a> </div>
                         </div>
                     </div>
                 </div>
