--- a/templates/about.html
+++ b/templates/about.html
@@ -76,7 +76,7 @@
                             support services - so that your business can focus on its ascent without forked
                             distractions. </p>
                         <p>Span Global Services is a unit of the Champions Group conglomerate. </p>
-                        <div class="mb-4 mt-4"> <a href="https://www.spanglobalservices.com/contact-us"
+                        <div class="mb-4 mt-4"> <a href="/contact-us/"
                                 class="dgreen-btn circle-fa">Talk to us &nbsp; <i
                                     class="fa icon ion-android-arrow-forward"></i></a> </div>
                     </div>
@@ -111,7 +111,7 @@
                     <h2 class="subhead-small-blk">Our Services-</h2>
                 </div>
                 <div class="col-lg-4 mb-4 wow fadeInLeft"> <img
-                        src="https://www.spanglobalservices.com/assets/img/as-a-marketers.jpg" alt="As a Marketer"
+                        src="/static/assets/img/as-a-marketers.jpg" alt="As a Marketer"
                         title="As a Marketer" class="respo-img" />
                     <h4 class="pt-3 para-head">As a Marketer</h4>
                     <ul class="space-list">
@@ -122,12 +122,12 @@
                         <li>Event Marketing</li>
                         <li>Direct Mail Marketing</li>
                     </ul>
-                    <div class=""> <a href="https://www.spanglobalservices.com/data-driven-marketing"
+                    <div class=""> <a href="#"
                             class="blk-text-link circle-blk-fa">See More &nbsp; <i
                                 class="fa icon ion-android-arrow-forward"></i></a> </div>
                 </div>
                 <div class="col-lg-4 mb-4 wow fadeInLeft"> <img
-                        src="https://www.spanglobalservices.com/assets/img/as-a-consultant.jpg" alt="As a Consultant"
+                        src="/static/assets/img/as-a-consultant.jpg" alt="As a Consultant"
                         title="As a Consultant" class="respo-img" />
                     <h4 class="pt-3 para-head">As a Consultant</h4>
                     <ul class="space-list">
@@ -136,14 +136,15 @@
                         <li>Marketing Automation</li>
                         <li>Marketing/Sales Integration</li>
                         <li>Business Consulting</li>
-                        <li>and many more..</li>
+
                     </ul>
-                    <div> <a href="https://www.spanglobalservices.com/as-a-consultant"
+                    <div>
+                        <a href="#"
                             class="blk-text-link circle-blk-fa">See More &nbsp; <i
                                 class="fa icon ion-android-arrow-forward"></i></a> </div>
                 </div>
                 <div class="col-lg-4 mb-4 wow fadeInLeft"> <img
-                        src="https://www.spanglobalservices.com/assets/img/as-a-data-expert.jpg" alt="Data Expert"
+                        src="/static/assets/img/as-a-data-expert.jpg" alt="Data Expert"
                         title="Data Expert" class="respo-img" />
                     <h4 class="pt-3 para-head">Data Expert</h4>
                     <ul class="space-list">
@@ -154,7 +155,7 @@
                         <li>Data Cleansing &amp; Verification</li>
                         <li>Tech Install-base Lists</li>
                     </ul>
-                    <div> <a href="https://www.spanglobalservices.com/as-a-data-expert"
+                    <div> <a href="#"
                             class="blk-text-link circle-blk-fa">See More &nbsp; <i
                                 class="fa icon ion-android-arrow-forward"></i></a> </div>
                 </div>
@@ -170,42 +171,42 @@
                 <div class="col-lg-6 mb-4 wow fadeInLeft">
                     <div class="row">
                         <div class="col-md-3 text-center mb-4 "> <img
-                                src="https://www.spanglobalservices.com/assets/img/automobile-thumb.png"
+                                src="/static/assets/img/automobile-thumb.png"
                                 alt="Auto Mobile" title="Auto Mobile" class="respo-img" />
                             <p>Automobile</p>
                         </div>
                         <div class="col-md-3 text-center mb-4 "> <img
-                                src="https://www.spanglobalservices.com/assets/img/finance-thumb.png" alt="Finance"
+                                src="/static/assets/img/finance-thumb.png" alt="Finance"
                                 title="Finance" class="respo-img" />
                             <p>Finance</p>
                         </div>
                         <div class="col-md-3 text-center mb-4 "> <img
-                                src="https://www.spanglobalservices.com/assets/img/healthcare-thumb.png"
+                                src="/static/assets/img/healthcare-thumb.png"
                                 alt="Healthcare" title="Healthcare" class="respo-img" />
                             <p>Healthcare</p>
                         </div>
                         <div class="col-md-3 text-center mb-4 "> <img
-                                src="https://www.spanglobalservices.com/assets/img/real-estate-thumb.png"
+                                src="/static/assets/img/real-estate-thumb.png"
                                 alt="Real Estate" title="Real Estate" class="respo-img" />
                             <p>Real Estate</p>
                         </div>
                         <div class="col-md-3 text-center mb-4 "> <img
-                                src="https://www.spanglobalservices.com/assets/img/marketing-add-thumb.png"
+                                src="/static/assets/img/marketing-add-thumb.png"
                                 alt="Marketing & Advertising" title="Marketing & Advertising" class="respo-img" />
                             <p>Marketing &amp; Advertising</p>
                         </div>
                         <div class="col-md-3 text-center mb-4 "> <img
-                                src="https://www.spanglobalservices.com/assets/img/manufacturing-thumb.png"
+                                src="/static/assets/img/manufacturing-thumb.png"
                                 alt="Manufacturing" title="Manufacturing" class="respo-img" />
                             <p>Manufacturing</p>
                         </div>
                         <div class="col-md-3 text-center mb-4 "> <img
-                                src="https://www.spanglobalservices.com/assets/img/media-thumb.png"
+                                src="/static/assets/img/media-thumb.png"
                                 alt="Media & Publishing" title="Media & Publishing" class="respo-img" />
                             <p>Media &amp; Publishing</p>
                         </div>
                         <div class="col-md-3 text-center mb-4 "> <img
-                                src="https://www.spanglobalservices.com/assets/img/information-thumb.png"
+                                src="/static/assets/img/information-thumb.png"
                                 alt="Information Technology" title="Information Technology" class="respo-img" />
                             <p>Information Technology</p>
                         </div>
@@ -218,7 +219,7 @@
                         <p>We have deep-dived into technology businesses, like no one else, with our exclusive tech data
                             search tool – Tech Connect!</p>
                         <p>Which industry do you serve?</p>
-                        <div class="mb-4 mt-4"> <a href="https://www.spanglobalservices.com/contact-us"
+                        <div class="mb-4 mt-4"> <a href="/contact-us/"
                                 class="dgreen-btn circle-fa">Get A Free Industry-wise Consultation &nbsp; <i
                                     class="fa icon ion-android-arrow-forward"></i></a> </div>
                     </div>
@@ -291,28 +292,28 @@
                 <div class="col-lg-6 mb-4 wow fadeInLeft centeralign">
                     <div class="row">
                         <div class="col-md-3 col-4 mb-2 text-center wow fadeInLeft"> <img
-                                src="https://www.spanglobalservices.com/assets/img/icon/1.png" class="respo-img"
+                                src="/static/assets/img/icon/1.png" class="respo-img"
                                 alt="VMWare" title="VMWare" /> </div>
                         <div class="col-md-3 col-4 mb-2 text-center wow fadeInLeft"> <img
-                                src="https://www.spanglobalservices.com/assets/img/icon/2.png" class="respo-img"
+                                src="/static/assets/img/icon/2.png" class="respo-img"
                                 alt="Lawson" title="Lawson" /> </div>
                         <div class="col-md-3 col-4 mb-2 text-center wow fadeInLeft"> <img
-                                src="https://www.spanglobalservices.com/assets/img/icon/3.png" class="respo-img"
+                                src="/static/assets/img/icon/3.png" class="respo-img"
                                 alt="Standard & Poor's" title="Standard & Poor's" /> </div>
                         <div class="col-md-3 col-4 mb-2 text-center wow fadeInLeft"> <img
-                                src="https://www.spanglobalservices.com/assets/img/icon/4.png" class="respo-img"
+                                src="/static/assets/img/icon/4.png" class="respo-img"
                                 alt="Applied Biosystems" title="Applied Biosystems" /> </div>
                         <div class="col-md-3 col-4 mb-2 text-center wow fadeInLeft"> <img
-                                src="https://www.spanglobalservices.com/assets/img/icon/5.png" class="respo-img"
+                                src="/static/assets/img/icon/5.png" class="respo-img"
                                 alt="Nationwide" title="Nationwide" /> </div>
                         <div class="col-md-3 col-4 mb-2 text-center wow fadeInLeft"> <img
-                                src="https://www.spanglobalservices.com/assets/img/icon/6.png" class="respo-img"
+                                src="/static/assets/img/icon/6.png" class="respo-img"
                                 alt="Bank of America" title="Bank of America" /> </div>
                         <div class="col-md-3 col-4 mb-2 text-center wow fadeInLeft"> <img
-                                src="https://www.spanglobalservices.com/assets/img/icon/7.png" class="respo-img"
+                                src="/static/assets/img/icon/7.png" class="respo-img"
                                 alt="TriNet" title="TriNet" /> </div>
                         <div class="col-md-3 col-4 mb-2 text-center wow fadeInLeft"> <img
-                                src="https://www.spanglobalservices.com/assets/img/icon/8.png" class="respo-img"
+                                src="/static/assets/img/icon/8.png" class="respo-img"
                                 alt="Cisco" title="Cisco" /> </div>
                     </div>
                 </div>
@@ -333,10 +334,10 @@
                         <div class="form">
                             <form method="post" name="contactside" class="contactForm"
                                 onsubmit="return fnValidationContactside()"
-                                action="https://www.spanglobalservices.com/scripts/formmail"
+                                action=""
                                 enctype="multipart/form-data"> <input name="subject" type="hidden"
                                     value="Contact Details from Span Global Services"> <input name="redirect_url"
-                                    type="hidden" value="https://www.spanglobalservices.com/thanks">
+                                    type="hidden" value="">
                                 <div class=" form-row">
                                     <div class="col-lg-6 form-group"> <input type="text" name="fname"
                                             class="form-control" id="fname" placeholder="First Name*"> </div>
